ADD eureka provider and consumer

--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,7 @@
 
 	<modules>
 		<module>eureka-lore</module>
+		<module>eureka-provider</module>
+		<module>eureka-consumer</module>
 	</modules>
 </project>
