--- a/eureka-lore/src/main/resources/application.properties
+++ b/eureka-lore/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=8080
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
